--- a/package.json
+++ b/package.json
@@ -6,16 +6,15 @@
   "scripts": {
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start_database": "mongod",
-    "connect": "use medialab",
-    "port": "27017"
+    "start_database": "mongod"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
-    "mongodb": "^2.2.16"
+    "mongodb": "^2.2.16",
+    "mongoose": "^5.0.10"
   },
   "devDependencies": {
     "nodemon": "^1.17.2"
